Add weather stats
